2007-07-09  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclCompExpr.c:	Revision so that the END lexeme never
	gets inserted into the parse tree.  Later tree traversal never reaches
	it since its location in the tree is not variable.  Starting and
	stopping with the START lexeme (node 0) is sufficient.  Also finished
	lexeme code commentary.

	* generic/tclCompExpr.c:	Added missing creation and return
	of the Tcl_Parse fields that indicate error conditions.  [Bug 1749987]

2007-07-05  Don Porter  <dgp@users.sourceforge.net>

	* library/init.tcl (unknown):   Corrected inconsistent error message
	in interactive [unknown] when empty command is invoked. [Bug 1743676]

2007-07-05  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclNamesp.c (SetNsNameFromAny):   
	* generic/tclObj.c (SetCmdNameFromAny):   Avoid unnecessary
	ckfree/ckalloc when the old structs can be reused.
	
2007-07-04  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclNamesp.c:   Fix case where a FQ cmd or ns was being
	* generic/tclObj.c:      cached in a different interp, tkcon 
	                         [Bug 1747512] 

2007-07-03  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclCompExpr.c:	Revised #define values so that there
	is now more expansion room to define more BINARY operators.

2007-07-02  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclHash.c (CompareStringKeys): Always use the strcmp()
	version; the operation is functionally equivalent, the speed is
	identical (up to measurement limitations), and yet the code is
	simpler. [FRQ 951168]

2007-07-02  Don Porter  <dgp@users.sourceforge.net>

	* generic/tcl.h:	Removed TCL_PRESERVE_BINARY_COMPATIBILITY and
	* generic/tclHash.c:	any code enabled when it is set to 0.  We will
	* generic/tclStubInit.c:	always want to preserve binary compat
	of the structs that appear in the interface through the 8.* series of
	releases, so it's pointless to drag around this never-enabled
	alternative.

	* generic/tclIO.c:	Removed dead code.